<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/tv_bienvenueInscrire"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_pseudoInscrire"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bienvenue"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_pseudo"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_emailInscrire"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pseudoInscrire"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_username"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_emailInscrire"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_mdp"
        android:padding="15dp"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />


    <LinearLayout
        android:id="@+id/ll_boutons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_inscription"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/akihaMangaOrange"
            android:text="@string/b_inscire" />

    </LinearLayout>




</RelativeLayout>